<!--
 
  CRIMSy Agency 
  Copyright 2020 Leibniz-Institut f. Pflanzenbiochemie
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 <modelVersion>4.0.0</modelVersion>
 
 <groupId>de.ipb-halle</groupId>
 <artifactId>signals</artifactId>
 <version>1.0</version>
 <packaging>jar</packaging>
 
 <name>IPB signals client</name>
 <url>http://www.ipb-halle.de</url>
 
 <properties>
  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

  <!-- check Maven Central for latest versions! -->
  <cxf.version>4.0.0</cxf.version>
 </properties>

 <!-- define (additional) repositories -->
 <repositories>
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2/</url>
   </repository>
   <repository>
     <id>sonatype public</id>
     <url>https://oss.sonatype.org/content/groups/public/</url>
   </repository>
 </repositories>

 
 <build>
  <plugins>

   <!-- compile plugin -->
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-compiler-plugin</artifactId>
    <version>3.1</version>
    <configuration>
     <source>1.8</source>
     <target>1.8</target>
     <compilerArgument>-Xlint:all</compilerArgument>
     <encoding>${project.build.sourceEncoding}</encoding>
    </configuration>
   </plugin>

    <!-- assembly plugin -->
    <plugin>
      <artifactId>maven-assembly-plugin</artifactId>
      <version>2.6</version>
      <configuration>
        <descriptorRefs>
          <descriptorRef>jar-with-dependencies</descriptorRef> 
        </descriptorRefs>
        <archive>
          <manifest>
            <mainClass>de.ipb_halle.signals.Signals</mainClass>
          </manifest>
         </archive>
      </configuration>
      <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
      </executions>
    </plugin>

    <plugin>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.2</version>
        <executions>
            <execution>
                <phase>package</phase>
                <goals>
                    <goal>shade</goal>
                </goals>
     
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/faces-config.xml</exclude>
                                <exclude>LICENSE</exclude>
                                <exclude>NOTICE</exclude>
                                <exclude>CHANGES</exclude>
                                <exclude>README</exclude>
                                <exclude>builddef.lst</exclude>
                                <exclude>javax/xml/**</exclude>
                                <exclude>jakarta/xml/**</exclude>

                                <!-- didn't help ... -->
                                <exclude>org/apache/openjpa/**</exclude>
                                <exclude>default.openejb.conf</exclude>
                            </excludes>
                        </filter>
                    </filters>
                 
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>de.ipb_halle.signals.Signals</mainClass>
                        </transformer>
                         
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                        <transformer implementation="org.apache.openwebbeans.maven.shade.OpenWebBeansPropertiesTransformer"/>
                    </transformers>
                 
                </configuration>
            </execution>
        </executions>
        <dependencies>
            <dependency>
                <groupId>org.apache.openwebbeans</groupId>
                <artifactId>openwebbeans-maven</artifactId>
                <version>1.7.0</version>
            </dependency>
        </dependencies>
    </plugin>



  </plugins>
 </build>


  <dependencies>

  <!-- Reference implementation of JSON encoders/decoders -->
  <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.9</version>
  </dependency>

  <!-- commons-cli -->
  <dependency>
    <groupId>commons-cli</groupId>
    <artifactId>commons-cli</artifactId>
    <version>1.5.0</version>
  </dependency>


  <!-- commons-csv -->
  <dependency>
    <groupId>org.apache.commons</groupId>
    <artifactId>commons-csv</artifactId>
    <version>1.5</version>
  </dependency>

  <!-- Apache CXF (jaxrs) -->
  <dependency>
   <groupId>org.apache.cxf</groupId>
   <artifactId>cxf-core</artifactId>
   <version>${cxf.version}</version>
  </dependency>

  <dependency>
   <groupId>org.apache.cxf</groupId>
   <artifactId>cxf-rt-rs-client</artifactId>
   <version>${cxf.version}</version>
  </dependency>

  <dependency>
   <groupId>org.apache.cxf</groupId>
   <artifactId>cxf-rt-transports-http</artifactId>
   <version>${cxf.version}</version>
  </dependency>

  <!-- Logging: log4j 2 -->
  <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.17.2</version>
  </dependency>

  <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-web</artifactId>
      <version>2.17.2</version>
  </dependency>

  <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>2.17.2</version>
  </dependency>



  <!-- TomEE / openEJB  -->
  <dependency>
    <groupId>org.apache.tomee</groupId>
    <artifactId>openejb-core</artifactId>
    <version>9.0.0</version>
  </dependency>

  <!-- needed on JDK 11: API, java.xml.bind module -->
  <dependency>
    <groupId>jakarta.xml.bind</groupId>
    <artifactId>jakarta.xml.bind-api</artifactId>
    <version>4.0.0</version>
  </dependency>

  <!-- needed on JDK 11: Runtime, com.sun.xml.bind module -->
  <dependency>
    <groupId>org.glassfish.jaxb</groupId>
    <artifactId>jaxb-runtime</artifactId>
    <version>4.0.1</version>
  </dependency>

  <!-- Hibernate -->
  <dependency>
      <groupId>org.hibernate.common</groupId>
      <artifactId>hibernate-commons-annotations</artifactId>
      <version>6.0.5.Final</version>
  </dependency>

  <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>6.0.2.Final</version>
  </dependency>

  <!-- Hibernate: provide org.eclipse.yasson.JsonBindingProvider for Hibernate initialization -->
  <dependency>
    <groupId>org.eclipse</groupId>
    <artifactId>yasson</artifactId>
    <version>3.0.2</version>
  </dependency>

  <!-- unit testing -->
  <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.8.2</version>
      <scope>test</scope>
  </dependency>
  <!-- keeps old JUnit4 tests functional -->
  <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <version>5.8.2</version>
      <scope>test</scope>
  </dependency>


  <!-- org.postgresql/postgresql JDBC 4.2 -->
  <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.5.1</version>
  </dependency>

  <!-- SLF4J -->
  <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.30</version>
  </dependency>

  </dependencies>
</project>
